GNOME Bugzilla – Bug 744503
wrong usage of gdk_property_get() (once again)
Last modified: 2015-07-14 19:52:29 UTC
Created attachment 296811 [details] [review] seahorse-key-manager-store.c.patch During fixing error in file-roller (https://bugzilla.gnome.org/show_bug.cgi?id=479351), I've found similar code in seahorse. In seahorse-3.14.0/libseahorse/seahorse-key-manager-store.c function gdk_property_get is used. However, the actual length of the answer is not checked, so it can return garbage on the end of the string. Patch, fixing this behavior is attached.
Created attachment 307429 [details] [review] Fix wrong usage of gdk_property_get()
Attachment 307429 [details] pushed as a81db53 - Fix wrong usage of gdk_property_get()