Fix wrong usage of gdk_property_get()

https://bugzilla.gnome.org/show_bug.cgi?id=744503